# telegram-bot-template-v2

./: .env.prod  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
infrastructure/database/models/: users.py
infrastructure/migrations/: env.py
settings/: app_settings.py  bot_settings.py  db_settings.py
tg_bot/: main.py
tg_bot/handlers/: __init__.py
tg_bot/handlers/admin/: __init__.py
tg_bot/handlers/channel/: __init__.py
tg_bot/handlers/errors/: __init__.py
tg_bot/handlers/user/: __init__.py  start.py
tg_bot/locales/: messages.pot
tg_bot/locales/en/LC_MESSAGES/: messages.mo
tg_bot/locales/ru/LC_MESSAGES/: messages.mo  messages.po
tg_bot/middlewares/: database.py
