[tool.poetry]
name = "telegram-bot-template-v1"
version = "0.1.0"
description = ""
authors = ["alex <i@alex-bogdanov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
betterlogging = "^1.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "~4.5"
babel = "^2.14.0"
apscheduler = "^3.10.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
